tests/snapshots/examples_fixtures/type_system__failing__45_effect_row_subtract_missing_io.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/45_effect_row_subtract_missing_io.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E400]: MISSING EFFECT

Call to `run_with_row` requires effect `IO` in this function signature.

  --> examples/type_system/failing/45_effect_row_subtract_missing_io.flx:17:5
   |
17 |     run_with_row(io_only)
   |     ^^^^^^^^^^^^
   |     ------------ effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify () -> Unit with Time with () -> Unit with IO.

  --> examples/type_system/failing/45_effect_row_subtract_missing_io.flx:17:5
   |
17 |     run_with_row(io_only)
   |     ^^^^^^^^^^^^^^^^^^^^^
   |     --------------------- expected () -> Unit with Time, found () -> Unit with IO

Found 2 errors.
== stdout ==
<not executed>
